<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>tracetools_acceleration</name>
  <version>0.4.0</version>
  <description>
    LTTng tracing provider wrapper for ROS 2 packages using hardware acceleration.
    Fork of tracetools to trace hardware acceleration in ROS 2.
  </description>
  <maintainer email="victorma@xilinx.com">Víctor Mayoral-Vilches</maintainer>
  <license>Apache 2.0</license>
  <author email="victorma@xilinx.com">Víctor Mayoral-Vilches</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
